--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsx src/app.ts",
-    "dev": "tsx watch src/app.ts",
+   "start": "tsx src/app.ts",
+    "dev": "nodemon --watch src --exec tsx src/app.ts",
     "build": "tsc"
   },
   "repository": {
