--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-   "start": "tsx src/app.ts",
+    "start": "tsx src/app.ts",
     "dev": "nodemon --watch src --exec tsx src/app.ts",
     "build": "tsc"
   },
@@ -57,8 +57,10 @@
     "@types/cookie": "^0.6.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
+    "@types/html-to-text": "^9.0.4",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.18",
+    "@types/prismjs": "^1.26.5",
     "@types/prop-types": "^15.7.14",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.26.0",
