--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "busboy": "^1.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -53,6 +54,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
+    "@types/busboy": "^1.5.4",
     "@types/connect": "^3.4.38",
     "@types/cookie": "^0.6.0",
     "@types/cookie-parser": "^1.4.8",
