--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.14.3",
     "multer": "^1.4.5-lts.2",
     "nanoid": "^5.1.5",
